Add site analyzer
