# v1/get-started/main.go
@@ -8,4 +8,5 @@ func Routes(r *gin.RouterGroup) {
 	r.POST("/get-started", CreateAccount)
 	//r.GET("/get-started/location-service/:domain", cloudflare.Verify, GetLocationsAndServices)
 	r.GET("/get-started/location-service/:domain", GetLocationsAndServices)
+	r.POST("/get-started/ad-content", GetAdContent)
 }
